# mygeopy

./: .gitignore  pyproject.toml  test.yml
.github/workflows/: test.yml
mygeopy/: triangle.py
tests/: test_triangle.py
